force-app/main/default/objects/Cluster_Issue_Conversion_Mapping__mdt/Cluster_Issue_Conversion_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type consists of field mapping from for Case/Opportunity creation from Cluster issue conversion</description>
    <label>Cluster Issue Conversion Mapping</label>
    <pluralLabel>Cluster Issue Conversion Mappings</pluralLabel>
</CustomObject>