force-app/main/default/objects/Cluster_Issue_Conversion_Mapping__mdt/fields/Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Object_Field__c</fullName>
    <label>Object Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>