force-app/main/default/objects/Cluster_Issue_Conversion_Mapping__mdt/fields/Object_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Object_Field_Value__c</fullName>
    <label>Object Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>