force-app/main/default/objects/Cluster_Issue_Conversion_Mapping__mdt/listViews/All_mappings.listView-meta.xml
<ListView>
    <fullName>All_mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Dynamic__c</columns>
    <columns>Object__c</columns>
    <columns>Object_Field__c</columns>
    <columns>Object_Field_Datatype__c</columns>
    <columns>Object_Field_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All mappings</label>
</ListView>